# car_insurance_fraud_detection

./: .gitignore  fraud.ipynb  fraud_with_cv.ipynb  pyproject.toml
